--- a/Report06/web.xml
+++ b/Report06/web.xml
@@ -10,8 +10,10 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
 
-<error-page>
-	<error-code>500</error-code>
-	<location>/6주차/error/500code.jsp</location>
-</error-page>
+	<!-- 커스텀 에러페이지(?)를 사용하기 위하여 기술하는 부분 -->
+  <error-page>
+    <error-code>500</error-code>
+    <location>/6주차/error/500code.jsp</location>
+  </error-page>
+	
 </web-app>
